[package]
name = "bench"
version = "0.1.0"
authors = ["Gabe Yuan <gabe@zq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# default-features 是指是否使用 “引入包” 中定义的 default features
hello_word = { path = "../", default-features = false}

# features 是直接给 “引入包” 添加 features
hi = { path = "../hi/", default-features = false, features = ["opencl"] }

# optional = true 是因为下面有个 say-again 特性，需表明是可选包依赖包
again = { path = "../again/", optional = true }

[features]
# “本包” 的默认 features 分组
default = ["gpu-group"]

# “引入包” 的 features 分组
gpu-group = ["hello_word/gpu","hi/gpu"]
opencl-group = ["hello_word/opencl","hi/opencl"]


# 没有依赖关系的特性，主要用于条件编译
# cargo run --features "say-if"
say-if = []

# `say-again` 特性 需要 again 包.
# cargo run --features "say-if say-again"
say-again = ["again"]
